force-app/main/default/objects/Case_Detail__c/Case_Detail__c.object-meta.xml
<CustomObject>
    <description>Child custom object holds Case-Type specific fields.</description>
    <label>Case Detail</label>
    <nameField>
        <label>Case Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>