force-app/main/default/objects/Case_Detail__c/fields/BM_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>BM_Due_Date__c</fullName>
    <description>The date by which the RFP response must be submitted.</description>
    <inlineHelpText>RFP submission deadline</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>