force-app/main/default/objects/Case_Detail__c/fields/BM_Portal_Login_Required__c.field-meta.xml
<CustomField>
    <fullName>BM_Portal_Login_Required__c</fullName>
    <description>Indicates whether the Bid Management team needs a portal login to submit the response on this opportunity.</description>
    <inlineHelpText>If yes, credentials must be in the case description</inlineHelpText>
    <label>Portal Login Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>