force-app/main/default/objects/Case_Detail__c/fields/BM_Requester_Info_Complete__c.field-meta.xml
<CustomField>
    <fullName>BM_Requester_Info_Complete__c</fullName>
    <description>Field to check if all BID Management Required Field are populated.</description>
    <formula>AND(
				NOT(ISBLANK(TEXT(BM_Request_Type__c))),
				NOT(ISBLANK(TEXT(BM_Due_Date__c))),
				NOT(ISBLANK(TEXT(BM_Portal_Login_Required__c))),
				NOT(ISBLANK(TEXT(BM_Submission_Method__c)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>BID Management Required Field are populated</inlineHelpText>
    <label>Requester Info Complete</label>
    <type>Checkbox</type>
</CustomField>