force-app/main/default/objects/Case_Detail__c/fields/BM_Submission_Method__c.field-meta.xml
<CustomField>
    <fullName>BM_Submission_Method__c</fullName>
    <description>The channel through which the completed bid must be submitted to the customer or procurement body.</description>
    <inlineHelpText>Select how the response will be delivered to the customer.</inlineHelpText>
    <label>Submission Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online Portal</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>eProcurement System</fullName>
            </value>
            <value>
                <fullName>Physical Delivery</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Two-Stage Submission</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>