force-app/main/default/objects/Case_Detail__c/fields/BV_Compliant__c.field-meta.xml
<CustomField>
    <fullName>BV_Compliant__c</fullName>
    <description>Whether the booking is compliant. Shown when Booking Verification Status = Pass.</description>
    <label>Compliant?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>