force-app/main/default/objects/Case_Detail__c/fields/BV_Compliant_Notes__c.field-meta.xml
<CustomField>
    <fullName>BV_Compliant_Notes__c</fullName>
    <description>Explanation when the booking is not compliant. Shown when Booking Verification Status = Pass and Compliant? = No.</description>
    <label>Compliant Notes</label>
    <type>TextArea</type>
</CustomField>