force-app/main/default/objects/Case_Detail__c/fields/BV_Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>BV_Rejection_Date__c</fullName>
    <description>Auto-populated when Rejection Reason becomes mandatory (Status = Reject). Timestamp logic is a separate Flow/trigger, not covered by this build.</description>
    <label>Rejection Date</label>
    <type>DateTime</type>
</CustomField>