force-app/main/default/objects/Case_Detail__c/fields/BV_Rejection_Reasons__c.field-meta.xml
<CustomField>
    <fullName>BV_Rejection_Reasons__c</fullName>
    <description>Booking verification rejection reason codes.</description>
    <label>Rejection Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-Missing Contractual Documents</fullName>
            </value>
            <value>
                <fullName>2-Missing Pricing Documents</fullName>
            </value>
            <value>
                <fullName>3-Missing Customer Signature</fullName>
            </value>
            <value>
                <fullName>4-No Pricing Approval</fullName>
            </value>
            <value>
                <fullName>5-Deal Value Incorrect</fullName>
            </value>
            <value>
                <fullName>6-International Non-submittal</fullName>
            </value>
            <value>
                <fullName>7-Missing IM Signature</fullName>
            </value>
            <value>
                <fullName>8-Contractual Documents Incorrect</fullName>
            </value>
            <value>
                <fullName>9-Non Commissionable</fullName>
            </value>
            <value>
                <fullName>10-Other details</fullName>
            </value>
            <value>
                <fullName>11-Product Selection Incorrect</fullName>
            </value>
            <value>
                <fullName>12-Wrong Deal Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>