force-app/main/default/objects/Case_Detail__c/fields/BV_Status__c.field-meta.xml
<CustomField>
    <fullName>BV_Status__c</fullName>
    <description>Booking verification outcome. Pass = NCSP submission automation; Reject = move stage back/Lost; Hold = Chatter to seller with rejection details.</description>
    <label>Booking Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Hold Pending Correction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>