force-app/main/default/objects/Case_Detail__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>Parent Case Object</description>
    <inlineHelpText>Parent Case Object</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Details</relationshipLabel>
    <relationshipName>Case_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>