force-app/main/default/objects/Case_Detail__c/fields/DD_Dedicated_Capital__c.field-meta.xml
<CustomField>
    <fullName>DD_Dedicated_Capital__c</fullName>
    <description>[CPQ] Dedicated capital. Corrected from AutoNumber to Currency.</description>
    <label>Dedicated Capital</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>