force-app/main/default/objects/Case_Detail__c/fields/DD_EBITDA_Margin__c.field-meta.xml
<CustomField>
    <fullName>DD_EBITDA_Margin__c</fullName>
    <description>[CPQ] EBITDA margin, auto-populated.</description>
    <label>EBITDA Margin</label>
    <type>Percent</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>