force-app/main/default/objects/Case_Detail__c/fields/DD_Gross_Margin_Pct__c.field-meta.xml
<CustomField>
    <fullName>DD_Gross_Margin_Pct__c</fullName>
    <description>[CPQ] Gross margin %, auto-populated. Built as a plain editable field pending formula-input clarification (references Standard_Cost__c, which does not exist elsewhere in source requirements).</description>
    <label>Gross Margin%</label>
    <type>Percent</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>