force-app/main/default/objects/Case_Detail__c/fields/DD_Notes__c.field-meta.xml
<CustomField>
    <fullName>DD_Notes__c</fullName>
    <description>[CPQ] Deal Desk notes.</description>
    <label>Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>