force-app/main/default/objects/Case_Detail__c/fields/DD_Payback_Period__c.field-meta.xml
<CustomField>
    <fullName>DD_Payback_Period__c</fullName>
    <description>[CPQ] Months to recover setup/implementation costs, auto-populated. Built as a plain editable field pending formula-input clarification (references Gross_Margin_Percent__c).</description>
    <label>Payback Period</label>
    <type>TextArea</type>
</CustomField>