force-app/main/default/objects/Case_Detail__c/fields/DD_Proposed_Total_Annual_Amount__c.field-meta.xml
<CustomField>
    <fullName>DD_Proposed_Total_Annual_Amount__c</fullName>
    <description>[CPQ] Auto-populated from CPQ, not this Case_Field_Mapping engine. Corrected from AutoNumber to Currency.</description>
    <label>Proposed Total Annual Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>