force-app/main/default/objects/Case_Detail__c/fields/DD_Renewal_Uplift__c.field-meta.xml
<CustomField>
    <fullName>DD_Renewal_Uplift__c</fullName>
    <description>[CPQ] Renewal uplift, auto-populated (renewals only). Built as a plain editable field pending formula-input clarification.</description>
    <label>Renewal Uplift</label>
    <type>Percent</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>