force-app/main/default/objects/Case_Detail__c/fields/DD_Revenue_Delta__c.field-meta.xml
<CustomField>
    <fullName>DD_Revenue_Delta__c</fullName>
    <description>[CPQ] Revenue delta. Built as a plain editable field pending formula-input clarification (references Baseline_Annual_Revenue__c, which does not exist elsewhere in source requirements).</description>
    <label>Revenue Delta</label>
    <type>Percent</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>