force-app/main/default/objects/Case_Detail__c/fields/DD_Unit_Price_Override__c.field-meta.xml
<CustomField>
    <fullName>DD_Unit_Price_Override__c</fullName>
    <description>[CPQ] Unit price override. Built as Currency (source sheet listed AutoNumber with precision, which is not valid metadata; corrected).</description>
    <label>Unit Price Override</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>