force-app/main/default/objects/Case_Detail__c/fields/Delay_Category__c.field-meta.xml
<CustomField>
    <fullName>Delay_Category__c</fullName>
    <description>Opportunity&apos;s Delay Category at Case creation</description>
    <inlineHelpText>Opportunity&apos;s Delay Category at Case creation</inlineHelpText>
    <label>Delay Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>