force-app/main/default/objects/Case_Detail__c/fields/Forecast_Billing_Months__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Billing_Months__c</fullName>
    <description>Opportunity&apos;s # of Forecast Billing Months at Case creation</description>
    <inlineHelpText>Opportunity&apos;s # of Forecast Billing Months at Case creation</inlineHelpText>
    <label>Forecast Billing Months</label>
    <length>40</length>
    <type>Text</type>
</CustomField>