force-app/main/default/objects/Case_Detail__c/fields/GCCS_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>GCCS_Request_Type__c</fullName>
    <description>GCCS request type.</description>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Administration</fullName>
            </value>
            <value>
                <fullName>Data Protection</fullName>
            </value>
            <value>
                <fullName>Information Security</fullName>
            </value>
            <value>
                <fullName>Notary Services</fullName>
            </value>
            <value>
                <fullName>Partner/Reseller</fullName>
            </value>
            <value>
                <fullName>Security Questionnaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>