force-app/main/default/objects/Case_Detail__c/fields/INFOSEC_Compliance_Certs_Required__c.field-meta.xml
<CustomField>
    <fullName>INFOSEC_Compliance_Certs_Required__c</fullName>
    <description>The compliance certifications the customer requires for this engagement.</description>
    <inlineHelpText>Select all required compliance certifications.</inlineHelpText>
    <label>Compliance Certifications Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOC 2 Type II</fullName>
            </value>
            <value>
                <fullName>ISO 27001</fullName>
            </value>
            <value>
                <fullName>FedRAMP</fullName>
            </value>
            <value>
                <fullName>HIPAA BAA</fullName>
            </value>
            <value>
                <fullName>GDPR DPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>