force-app/main/default/objects/Case_Detail__c/fields/INFOSEC_Customer_Audits__c.field-meta.xml
<CustomField>
    <fullName>INFOSEC_Customer_Audits__c</fullName>
    <description>The type of customer audit this request relates to.</description>
    <inlineHelpText>Select the type of customer audit involved.</inlineHelpText>
    <label>Customer Audits</label>
    <type>Date</type>
</CustomField>