force-app/main/default/objects/Case_Detail__c/fields/INFOSEC_Data_Residency__c.field-meta.xml
<CustomField>
    <fullName>INFOSEC_Data_Residency__c</fullName>
    <description>Whether data must reside in a specific country/region</description>
    <inlineHelpText>Describe any data residency requirements.</inlineHelpText>
    <label>Data Residency</label>
    <type>TextArea</type>
</CustomField>