force-app/main/default/objects/Case_Detail__c/fields/INFOSEC_Data_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>INFOSEC_Data_Risk_Level__c</fullName>
    <description>The assessed data risk level associated with this request.</description>
    <inlineHelpText>Select the data risk level for this request.</inlineHelpText>
    <label>Data Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>