force-app/main/default/objects/Case_Detail__c/fields/INFOSEC_Data_Types_In_Scope__c.field-meta.xml
<CustomField>
    <fullName>INFOSEC_Data_Types_In_Scope__c</fullName>
    <description>The categories of sensitive data in scope for this request.</description>
    <inlineHelpText>Select all data types in scope.</inlineHelpText>
    <label>Data Types In Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PII</fullName>
            </value>
            <value>
                <fullName>PHI (HIPAA)</fullName>
            </value>
            <value>
                <fullName>PCI</fullName>
            </value>
            <value>
                <fullName>IP (Intellectual Property)</fullName>
            </value>
            <value>
                <fullName>SLED/Gov Data</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>