force-app/main/default/objects/Case_Detail__c/fields/INFOSEC_Mitigation_Required__c.field-meta.xml
<CustomField>
    <fullName>INFOSEC_Mitigation_Required__c</fullName>
    <description>Indicates whether a risk mitigation plan is required before this request can be closed.</description>
    <inlineHelpText>Select whether mitigation is required.</inlineHelpText>
    <label>Mitigation Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>