force-app/main/default/objects/Case_Detail__c/fields/LEGAL_External_Counsel_Required__c.field-meta.xml
<CustomField>
    <fullName>LEGAL_External_Counsel_Required__c</fullName>
    <description>Whether external counsel is required.</description>
    <label>External Counsel Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>