force-app/main/default/objects/Case_Detail__c/fields/LEGAL_IM_Business_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>LEGAL_IM_Business_Sponsor__c</fullName>
    <description>IM business sponsor for this legal request.</description>
    <label>IM Business Sponsor Name</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Case Details (Legal IM Business Sponsor)</relationshipLabel>
    <relationshipName>Case_Details_Legal_Sponsor</relationshipName>
    <type>Lookup</type>
</CustomField>