force-app/main/default/objects/Case_Detail__c/fields/LEGAL_Related_Party__c.field-meta.xml
<CustomField>
    <fullName>LEGAL_Related_Party__c</fullName>
    <description>The customer, vendor, party, or target account related to this legal request.</description>
    <label>Customer, Vendor, Party or Target Name</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Details (Legal Related Party)</relationshipLabel>
    <relationshipName>Case_Details_Legal_Related_Party</relationshipName>
    <type>Lookup</type>
</CustomField>