force-app/main/default/objects/Case_Detail__c/fields/LEGAL_Request_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>LEGAL_Request_Sub_Type__c</fullName>
    <description>Legal request sub type.</description>
    <label>Request Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amendment/Addendum</fullName>
            </value>
            <value>
                <fullName>Assignment/Novation Transfer</fullName>
            </value>
            <value>
                <fullName>GDPR/DPA Amendment - Customer</fullName>
            </value>
            <value>
                <fullName>NDA/Confidentiality Agreement - Audit</fullName>
            </value>
            <value>
                <fullName>NDA/Confidentiality Agreement - Customer</fullName>
            </value>
            <value>
                <fullName>NDA/Confidentiality Agreement - IM</fullName>
            </value>
            <value>
                <fullName>NDA/Confidentiality Agreement - M&amp;A</fullName>
            </value>
            <value>
                <fullName>Other Non revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>