force-app/main/default/objects/Case_Detail__c/fields/LEGAL_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>LEGAL_Request_Type__c</fullName>
    <description>Legal request type.</description>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corp. Records &amp; Subsidiary Matters</fullName>
            </value>
            <value>
                <fullName>ESG/Sustainability</fullName>
            </value>
            <value>
                <fullName>General/Questions</fullName>
            </value>
            <value>
                <fullName>Intellectual Property &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Privacy &amp; Compliance</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Tuck-In</fullName>
            </value>
            <value>
                <fullName>Vendors &amp; Partnerships</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>