force-app/main/default/objects/Case_Detail__c/fields/LEGAL_Requester_Info_Complete__c.field-meta.xml
<CustomField>
    <fullName>LEGAL_Requester_Info_Complete__c</fullName>
    <description>Field to check if all required Legal Case-Requester fields are populated.</description>
    <formula>AND(
			NOT(ISBLANK(TEXT(LEGAL_Revenue_Type__c))),
			NOT(ISBLANK(TEXT(LEGAL_Date_Needed__c)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Required Legal Case-Requester fields are populated.</inlineHelpText>
    <label>Requester Info Complete</label>
    <type>Checkbox</type>
</CustomField>