force-app/main/default/objects/Case_Detail__c/fields/REVMGMT_Cash_Based_Margin__c.field-meta.xml
<CustomField>
    <fullName>REVMGMT_Cash_Based_Margin__c</fullName>
    <description>[CPQ] Cash-based margin, auto-populated. Corrected from AutoNumber to Currency.</description>
    <label>Cash-Based Margin</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>1</scale>
</CustomField>