force-app/main/default/objects/Case_Detail__c/fields/REVMGMT_Competitive_Intel__c.field-meta.xml
<CustomField>
    <fullName>REVMGMT_Competitive_Intel__c</fullName>
    <description>[CPQ] Competitive intel, auto-populated. Corrected from AutoNumber to Currency.</description>
    <label>Competitive Intel</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>