force-app/main/default/objects/Case_Detail__c/fields/REVMGMT_Floor_Revenue_Realization__c.field-meta.xml
<CustomField>
    <fullName>REVMGMT_Floor_Revenue_Realization__c</fullName>
    <description>[CPQ] Floor revenue realization.</description>
    <label>Floor Revenue Realization</label>
    <type>Percent</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>