force-app/main/default/objects/Case_Detail__c/fields/REVMGMT_Gross_Margin_Pct__c.field-meta.xml
<CustomField>
    <fullName>REVMGMT_Gross_Margin_Pct__c</fullName>
    <description>[CPQ] Gross margin %, auto-populated. Built as a plain editable field pending formula-input clarification.</description>
    <label>Gross Margin%</label>
    <type>Percent</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>