force-app/main/default/objects/Case_Detail__c/fields/REVMGMT_Incentives_Included__c.field-meta.xml
<CustomField>
    <fullName>REVMGMT_Incentives_Included__c</fullName>
    <description>[CPQ] Incentives included. Corrected from AutoNumber to Currency.</description>
    <label>Incentives Included</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>