force-app/main/default/objects/Case_Detail__c/fields/REVMGMT_Labor_Cost_Override__c.field-meta.xml
<CustomField>
    <fullName>REVMGMT_Labor_Cost_Override__c</fullName>
    <description>[CPQ] Labor/cost override. Corrected from AutoNumber to Currency.</description>
    <label>Labor/Cost Override</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>1</scale>
</CustomField>