force-app/main/default/objects/Case_Detail__c/fields/REVMGMT_Net_New_Revenue__c.field-meta.xml
<CustomField>
    <fullName>REVMGMT_Net_New_Revenue__c</fullName>
    <description>[CPQ] Net new revenue. Built as a plain editable field pending formula-input clarification; corrected from AutoNumber to Currency.</description>
    <label>Net New Revenue</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>