force-app/main/default/objects/Case_Detail__c/fields/REVMGMT_Pricing_Authority_Tier__c.field-meta.xml
<CustomField>
    <fullName>REVMGMT_Pricing_Authority_Tier__c</fullName>
    <description>[Deal Review] Pricing authority tier, auto-populated. Built as TextArea per the source sheet Type column (same Type/Values contradiction as Deal Desk).</description>
    <label>Pricing Authority Tier</label>
    <type>TextArea</type>
</CustomField>