force-app/main/default/objects/Case_Detail__c/fields/REVMGMT_Pricing_Logic_Used__c.field-meta.xml
<CustomField>
    <fullName>REVMGMT_Pricing_Logic_Used__c</fullName>
    <description>[CPQ] Pricing logic used, auto-populated (renewals only). Placeholder value pending client/BA input.</description>
    <label>Pricing Logic Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>