force-app/main/default/objects/Case_Detail__c/fields/REVMGMT_Retention_Strategy__c.field-meta.xml
<CustomField>
    <fullName>REVMGMT_Retention_Strategy__c</fullName>
    <description>[CPQ] Retention strategy, auto-populated (renewals only).</description>
    <label>Retention Strategy</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>