force-app/main/default/objects/Case_Detail__c/fields/REVMGMT_Revenue_Delta__c.field-meta.xml
<CustomField>
    <fullName>REVMGMT_Revenue_Delta__c</fullName>
    <description>[CPQ] Revenue delta. Built as a plain editable field pending formula-input clarification.</description>
    <label>Revenue Delta</label>
    <type>Percent</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>