force-app/main/default/objects/Case_Detail__c/fields/REVMGMT_Unit_Price_Override__c.field-meta.xml
<CustomField>
    <fullName>REVMGMT_Unit_Price_Override__c</fullName>
    <description>[CPQ] Unit price override. Corrected from AutoNumber to Currency.</description>
    <label>Unit Price Override</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>