force-app/main/default/objects/Case_Detail__c/fields/RMKT_ALM_Processing_Location__c.field-meta.xml
<CustomField>
    <fullName>RMKT_ALM_Processing_Location__c</fullName>
    <description>ALM processing location details for this request.</description>
    <label>ALM Processing Location</label>
    <type>LongTextArea</type>
    <length>15000</length>
</CustomField>