force-app/main/default/objects/Case_Detail__c/fields/RMKT_Condition_Notes__c.field-meta.xml
<CustomField>
    <fullName>RMKT_Condition_Notes__c</fullName>
    <description>Condition of the assets covered by this remarketing request.</description>
    <inlineHelpText>Select the asset condition.</inlineHelpText>
    <label>Condition Notes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Untested</fullName>
            </value>
            <value>
                <fullName>Open Box</fullName>
            </value>
            <value>
                <fullName>New Open Box</fullName>
            </value>
            <value>
                <fullName>New In Box</fullName>
            </value>
            <value>
                <fullName>As it is</fullName>
            </value>
            <value>
                <fullName>Pulled from working environment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>