force-app/main/default/objects/Case_Detail__c/fields/RMKT_Data_Destruction_Req__c.field-meta.xml
<CustomField>
    <fullName>RMKT_Data_Destruction_Req__c</fullName>
    <description>Data destruction requirement for the remarketed assets.</description>
    <label>Data Destruction Req</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wiping (Remarketing-ready)</fullName>
            </value>
            <value>
                <fullName>Shredding (Recycling)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>