force-app/main/default/objects/Case_Detail__c/fields/RMKT_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>RMKT_Due_Date__c</fullName>
    <description>Date this remarketing request is due.</description>
    <inlineHelpText>Allow up to 3 business days.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>