force-app/main/default/objects/Case_Detail__c/fields/RMKT_Project_Roll_Out_Day__c.field-meta.xml
<CustomField>
    <fullName>RMKT_Project_Roll_Out_Day__c</fullName>
    <description>Planned project roll-out date.</description>
    <label>Project Roll Out Day</label>
    <type>Date</type>
</CustomField>